Working websocket functionallity. BUG: Get notifications of own messages...

--- a/src/main/resources/templates/subscribe.html
+++ b/src/main/resources/templates/subscribe.html
@@ -249,251 +249,25 @@
 	</div>
 	<audio id="audio" src="/assets/mp3/notification.mp3"></audio>
 	<div th:replace="fragments/javascript :: generalJs" th:remove="tag"></div>
+	    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+	<script src="/assets/js/websocketclient.js"></script>
 	<script>
-		var date = null;
-		var msg = [];
-		var ownMsgId = [];
-		var ITEM_ENUM = {
-				felles : "FELLES",
-				SOC1 : "SOC1",
-				SOC2 : "SOC2",
-				SOC3 : "SOC3",
-				SOC4 : "SOC4",
-				SOC5 : "SOC5",
-				all : "all"
-		}
-		var audioMsgFor = ITEM_ENUM.felles;
 
-		function saveMessage(message) {
-			$.ajax({
-				url : "/api/message",
-				type : "POST",
-				data : JSON.stringify(message),
-				contentType : "application/json; charset=utf-8",
-				success : function(data, textStatus, xhr) {
-					$('#message').val("");
-					$("#newModal").modal('hide');
-					$('#requiresAction').prop('checked', false);
-
-					ownMsgId.push(data.id);
-				},
-				error : function(textStatus, errorThrown) {
-				}
-			});
-		}
-
-		function getUrlMessages(date, cell) {
-			var url = "/api/message?"
-			if (date) {
-				//var dateString = moment(date).format('DD/MM/YYYY/HH:mm:ss');
-				url += "after=" + date;
-
-			}
-			if (cell) {
-				url += "to=" + cell;
-			}
-
-			return url;
-		}
-
-		function fetchMessages(url, callback) {
-
-			$.ajax({
-				url : url,
-				type : "GET",
-				contentType : "application/json; charset=utf-8",
-				success : callback,
-				error : function(textStatus, errorThrown) {
-					swal("Connection lost", "Try a refresh", "warning");
-				}
-			});
-		}
-
-		function emptyTbody() {
-			$('tbody').empty();
-		}
-		
-		/*<![CDATA[*/
-		function prependMssage(item){
-			msg.push(item.id);
-			notifyUser(item);
-			date = moment(item.savedAt).format(
-					'DD/MM/YYYY/HH:mm:ss');
-			var $tr = $('<tr>', {
-				class : 'blink'
-			});
-
-			var td = '<td>'
-					+ moment(item.savedAt)
-							.format('DDHHmmMMMYYYY')
-					+ '</td><td>' + item.sentBy + '</td><td>'
-					+ item.sentTo + '</td><td>' + item.message
-					+ '</td>';
-
-			$tr.append(td);
-			
-			if (item.sentTo === ITEM_ENUM.SOC1) {
-				$("#soc1_msg_body").prepend($tr);
-			}
-			if (item.sentTo === ITEM_ENUM.SOC2) {
-				$("#soc2_msg_body").prepend($tr);
-			}
-			if (item.sentTo === ITEM_ENUM.SOC3) {
-				$("#soc3_msg_body").prepend($tr);
-			}
-			if (item.sentTo === ITEM_ENUM.SOC4) {
-				$("#soc4_msg_body").prepend($tr);
-			}
-			if (item.sentTo === ITEM_ENUM.SOC5) {
-				$("#soc5_msg_body").prepend($tr);
-			}
-			if (item.sentTo === "DropIn") {
-				$("#soc6_msg_body").prepend($tr);
-			}
-			if (item.sentTo === ITEM_ENUM.felles) {
-				$("tbody").prepend($tr);
-			} else {
-				$("#soc0_msg_body").prepend(
-						'<tr class="blink"><td>'
-								+ moment(item.savedAt).format(
-										'DDnovHHmmss')
-								+ '</td><td>' + item.sentBy
-								+ '</td><td>' + item.sentTo
-								+ '</td><td>' + item.message
-								+ '</td></tr>');
-			}	
-		}
-		function updateAllMessages(data, textStatus, xhr) {
-		
-			if (JSON.stringify(data).includes("DOCTYPE")) {
-				location.reload();
-			}
-			$(data).each(function(pos, item) {
-				
-						if ($.inArray(item.id, msg) === -1) {
-							
-							prependMessage(item);
-
-						}
-					})
-
-		}
-		/*]]>*/
-		function initSaveButton(){
-			$('#save').click(function() {
-				var message = {};
-				message.sentTo = $('#to').val();
-				message.sentBy = $('#from').val();
-				message.message = $('#message').val();
-				message.requiresAction = $('#requiresAction').is(':checked');
-				saveMessage(message);
-			})
-			
-			$('#fab-add').click(function() {
-				onClickNewFab();
-			})
-		}
-		
 		$(document).ready(function() {
-
-			initSaveButton();
-			requestNotificationPermissions();
+	
+			CLIENT.ioController.initSaveButton();
+			CLIENT.ioController.requestNotificationPermissions();
+			
+			CLIENT.webSocketController.connectAndSubscribe();
+			
 			//fetch all saved msg
 			//subscribe
 			getAllSavedMessages();
 			
-			startFetchingMessages();
+			//startFetchingMessages();
 		})
-		
-		$("#audio-chooser").change(function () {
-			    var str = "";
-			    $( "#audio-chooser option:selected" ).each(function() {
-					audioMsgFor = $(this).attr('data-target');
-			    });
-				
-		 });
-		
-		function getAllSavedMessages(){
-			fetchMessages(getUrlMessages(null, null), updateAllMessages);
-		}
-		function startFetchingMessages(){
-			fetchMessages(getUrlMessages(date, null), updateAllMessages);
-			window.setInterval(function() {
-				fetchMessages(getUrlMessages(date, null), updateAllMessages);
-			}, 3000);
-		}
 
-		$('a').click(function(e) {
-			e.preventDefault();
-			$('a').removeClass('active');
-			$('.msg-container').hide();
-
-			$($(this).attr('data-target')).show();
-			$(this).addClass('active');
-		});
-
-		function onClickNewFab() {
-			$("#newModal").modal();
-		}
-		function playAudio(item_id, to) {
-			
-			if(to === audioMsgFor || audioMsgFor === ITEM_ENUM.all){
-				
-				if ($.inArray(item_id, ownMsgId) === -1) {
-					var audio = document.getElementById("audio");
-					audio.play();
-				}
-			}
-		}
-		
-		function notifyUser(item){
-			//Play sound
-			 playAudio(item.id,item.sentTo);
-			
-			 if (Notification.permission === "granted") {
-				 //if user is allowed to display push notifications,show a notification
-				 showNotification(item);
-			 }
-			
-			 
-		}
-		function requestNotificationPermissions(){
-			
-			Notification.requestPermission(function(){
-				 // Let's check if the browser supports notifications
-				 
-				  if (!("Notification" in window)) {
-				    alert("This browser does not support system notifications");
-				  }
-
-				  // Let's check whether notification permissions have already been granted
-				  else if (Notification.permission === "granted") {
-					  
-				    // If it's okay let's create a notification
-				  //  var notification = new Notification("Hi there!");
-				  }
-
-				  // Otherwise, we need to ask the user for permission
-				  else if (Notification.permission !== 'denied') {
-					  
-				    Notification.requestPermission(function (permission) {
-				      // If the user accepts, let's create a notification
-				      if (permission === "granted") {
-				       // var notification = new Notification("Hi there!");
-				      }
-				    });
-				  }
-
-				  // Finally, if the user has denied notifications and you 
-				  // want to be respectful there is no need to bother them any more.
-			});
-		}
-	 	function showNotification(messageObject){
-	 		
-			//var img = '/to-do-notifications/img/icon-128.png';
-			var text = "From: "+ messageObject.sentBy + "\nTo: "+ messageObject.sentTo + "\nMessage: "+ messageObject.message + "\n";
-			var notification = new Notification('New message', { body: text, sound: '/assets/mp3/notification.mp3', silent:false});
-		}
 	</script>
 </body>
 </html>
