--- a/src/main/resources/templates/fragments/javascript.html
+++ b/src/main/resources/templates/fragments/javascript.html
@@ -22,7 +22,7 @@
 		<div th:fragment="appJs">
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>	
 			<script th:src="@{../assets/vendor/tag-input/bootstrap-tagsinput.js}"></script>		
-			<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.13/js/jquery.dataTables.js"></script>
+			<!-- script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.13/js/jquery.dataTables.js"></script-->
 			<script type="text/javascript" src="https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap4.min.js"></script>
 			
 			<script type="text/javascript" th:src="@{../assets/vendor/fullcalendar/fullcalendar.min.js}"></script>
