--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
 	<div class="img-container"></div>
 	<div class="img"></div>
 	<!--  div class="line-banner"></div-->
-	<div th:replace="fragments/header :: header" th:remove="tag"></div>
+	<!--  div th:replace="fragments/header :: header" th:remove="tag"></div-->
 
 	<div class="jumbotron"
 		style="text-align: center; background: rgba(0, 0, 0, 0); color: white;">
