Optimizing js code

--- a/src/main/resources/templates/subscribe.html
+++ b/src/main/resources/templates/subscribe.html
@@ -213,8 +213,8 @@
 					</div>
 					<div class="msg-container table-responsive text-left" id="soc5"
 						style="display: none;">
-						<table class="table-soc5  " cellspacing="0" width="100%"
-							id="postlist-table">
+						<table class="table  " cellspacing="0" width="100%"
+							id="table-soc5">
 							<thead>
 								<tr>
 									<th>DTG</th>
@@ -228,8 +228,8 @@
 					</div>
 					<div class="msg-container table-responsive text-left" id="soc6"
 						style="display: none;">
-						<table class="table-soc6  " cellspacing="0" width="100%"
-							id="postlist-table">
+						<table class="table " cellspacing="0" width="100%"
+							id="table-soc6">
 							<thead>
 								<tr>
 									<th>DTG</th>
