--- a/src/main/resources/templates/subscribe.html
+++ b/src/main/resources/templates/subscribe.html
@@ -123,7 +123,7 @@
 						>
 						<table class="table" cellspacing="0" width="100%" id="msg-table">
 							<thead>
-								<tr>
+								<tr class="felles">
 									<th>DTG</th>
 									<th>FRA</th>
 									<th>TIL</th>
